feat(domain): entidades de domínio, interfaces, serviços de domínio e configuração de ambiente.

--- a/GerenciaAluno.Api/appsettings.json
+++ b/GerenciaAluno.Api/appsettings.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "GerenciaAlunoBD": "Data Source=localhost,1434;Initial, Catalog=master;User ID=sa;Password=Estudos@2025;Encrypt=False"
+  }
 }
