--- a/GerenciaAluno.Api/GerenciaAluno.Api.csproj
+++ b/GerenciaAluno.Api/GerenciaAluno.Api.csproj
@@ -8,6 +8,23 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GerenciaAluno.Application\GerenciaAluno.Application.csproj" />
+    <ProjectReference Include="..\GerenciaAluno.Domain\GerenciaAluno.Domain.csproj" />
+    <ProjectReference Include="..\GerenciaAluno.Infra.Data\GerenciaAluno.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
