feat(infra): migration, repositórios e utilização do dapper.

--- a/GerenciaAluno.Api/appsettings.json
+++ b/GerenciaAluno.Api/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "GerenciaAlunoBD": "Data Source=localhost,1434;Initial, Catalog=master;User ID=sa;Password=Estudos@2025;Encrypt=False"
+    "GerenciaAlunoBD": "Data Source=localhost,1434;Initial Catalog=master;User ID=sa;Password=Estudos@2025;Encrypt=False"
   }
 }
