--- a/GerenciaAluno.Application/GerenciaAluno.Application.csproj
+++ b/GerenciaAluno.Application/GerenciaAluno.Application.csproj
@@ -7,13 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <ProjectReference Include="..\GerenciaAluno.Domain\GerenciaAluno.Domain.csproj" />
+    <ProjectReference Include="..\GerenciaAluno.Infra.Data\GerenciaAluno.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
